# how-to-harden

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  PHILOSOPHY.md  README.md  TODO-guide-pack-integration.md  VERSIONS.md  agent-orchestrator.yaml  package-lock.json
.claude/: settings.json
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: semgrep.yml  test.yml
Plans/: logical-brewing-robin.md
cli/: Cargo.toml
cli/crates/hth/: Cargo.toml
cli/crates/hth-core/: Cargo.toml
cli/crates/hth-core/src/: error.rs  lib.rs
cli/crates/hth-core/src/engine/: audit.rs  http.rs  jq.rs  jq_stdlib.rs  mod.rs  remediate.rs  terraform.rs
cli/crates/hth-core/src/loader/: mod.rs  pack.rs  yaml.rs
cli/crates/hth-core/src/models/: compliance.rs  config.rs  control.rs  mod.rs  report.rs
cli/crates/hth-core/src/output/: csv.rs  json.rs  mod.rs  sarif.rs  table.rs
cli/crates/hth-core/tests/: audit_engine_tests.rs
cli/crates/hth-github/: Cargo.toml
cli/crates/hth-github/src/: api.rs  auth.rs  lib.rs
cli/crates/hth-okta/: Cargo.toml
cli/crates/hth-okta/src/: api.rs  auth.rs  lib.rs
cli/crates/hth/src/: main.rs
cli/crates/hth/src/commands/: analyze.rs  init.rs  list.rs  mod.rs  remediate.rs  report.rs  scan.rs  validate.rs
cli/crates/hth/tests/: cli_tests.rs
content/adp/: adp-hardening-guide.md
content/asana/: asana-hardening-guide.md
content/atlassian/: atlassian-hardening-guide.md
content/azure-devops/: azure-devops-hardening-guide.md
content/bamboohr/: bamboohr-hardening-guide.md
content/beyondtrust/: beyondtrust-hardening-guide.md
content/box/: box-hardening-guide.md
content/circleci/: circleci-hardening-guide.md
content/crowdstrike/: crowdstrike-hardening-guide.md
content/cursor/: cursor-hardening-guide.md
content/cyberark/: cyberark-hardening-guide.md
content/databricks/: databricks-hardening-guide.md
content/datadog/: datadog-hardening-guide.md
content/dockerhub/: dockerhub-hardening-guide.md
content/dropbox/: dropbox-hardening-guide.md
content/freshservice/: freshservice-hardening-guide.md
content/github/: github hardening guide.md
content/gitlab/: gitlab-hardening-guide.md
content/gusto/: gusto-hardening-guide.md
content/hashicorp-vault/: hashicorp-vault-hardening-guide.md
content/hubspot/: hubspot-hardening-guide.md
content/jfrog/: jfrog-hardening-guide.md
content/klaviyo/: klaviyo-hardening-guide.md
content/launchdarkly/: launchdarkly-hardening-guide.md
content/looker/: looker-hardening-guide.md
content/mailchimp/: mailchimp-hardening-guide.md
content/marketo/: marketo-hardening-guide.md
content/miro/: miro-hardening-guide.md
content/monday/: monday-hardening-guide.md
content/netsuite/: netsuite-hardening-guide.md
content/new-relic/: new-relic-hardening-guide.md
content/notion/: notion-hardening-guide.md
content/okta/: okta-hardening-guide.md
content/oracle-hcm/: oracle-hcm-hardening-guide.md
content/pagerduty/: pagerduty-hardening-guide.md
content/ping-identity/: ping-identity-hardening-guide.md
content/power-bi/: power-bi-hardening-guide.md
content/rippling/: rippling-hardening-guide.md
content/sailpoint/: sailpoint-hardening-guide.md
content/salesforce/: salesforce hardening guide.md
content/sap-successfactors/: sap-successfactors-hardening-guide.md
content/servicenow/: servicenow-hardening-guide.md
content/smartsheet/: smartsheet-hardening-guide.md
content/snowflake/: snowflake-hardening-guide.md
content/snyk/: snyk-hardening-guide.md
content/splunk/: splunk-hardening-guide.md
content/tableau/: tableau-hardening-guide.md
content/terraform-cloud/: terraform-cloud-hardening-guide.md
content/vercel/: vercel-hardening-guide.md
content/wiz/: wiz-hardening-guide.md
content/zoom/: zoom-hardening-guide.md
docs/: CNAME  Gemfile  _config.yml  about.md  contributing.md  index.html  roadmap-obsidian-integrations.md
packs/: README.md
scripts/: sync-packs-to-data.sh  validate-guides.sh
templates/: recommendation-template.md  vendor-guide-template.md
(+1701 files in other folders)
