[workspace]
resolver = "2"
members = [
    "crates/hth",
    "crates/hth-core",
    "crates/hth-github",
    "crates/hth-okta",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["GRC Engineering <hello@grc.engineering>"]
license = "MIT"
repository = "https://github.com/grcengineering/how-to-harden"
description = "Security hardening audit and remediation CLI"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "gzip"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# CLI
clap = { version = "4", features = ["derive", "env", "string"] }

# Error handling
thiserror = "2"
anyhow = "1"

# jq evaluation (stable API)
jaq-interpret = "1.5"
jaq-parse = "1.0"
jaq-syn = "1.6"

# Output
comfy-table = "7"
indicatif = "0.17"
console = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Security
secrecy = { version = "0.10", features = ["serde"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Config
toml = "0.8"
dirs = "6"

# Schema validation
jsonschema = "0.29"

# Regex (for jq test() function)
regex = "1"

# Terraform HCL generation
hcl-rs = "0.18"

# Testing
wiremock = "0.6"

# Workspace crates
hth-core = { path = "crates/hth-core" }
hth-github = { path = "crates/hth-github" }
hth-okta = { path = "crates/hth-okta" }
